# NeuralEvolution

./: CMakeLists.txt  README.md  main.cpp
data/: dataset.h
evolution_engine/: engine.cpp  engine.h
genetics/: chromosome.cpp  chromosome.h  population.cpp  population.h
genetics/crossover_operators/: abstract_crossover.h  arithmetic_crossover.h  selection_crossover.h  uniform_crossover.h
genetics/mutation_operators/: abstract_mutation.h  add_mutation.h  switch_mutation.h
neural/: neural_network.cpp  neural_network.h
sorter/: mem_comparer.h
